--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,7 +14,10 @@ html {
     text-rendering: optimizeLegibility;
 }
 
-.clearfix {zoom: 1}
+.clearfix {
+    zoom: 1
+}
+
 .clearfix:after {
     content: '.';
     clear: both;
@@ -43,7 +46,7 @@ section {
 h1, h2, h3 {
     font-weight: 300;
     text-transform: uppercase;
-    }
+}
 
 h1 {
     margin-top: 0;
@@ -98,6 +101,35 @@ h3 {
     display: block;
     color: #e67e22;
     margin-bottom: 10px;
+}
+
+
+.icon-small {
+    display: inline-block;
+    width: 30px;
+    text-align: center;
+    color: #e67e22;
+    font-size: 120%;
+    /*Secrets to align text & icons*/
+    line-height: 120%;
+    vertical-align: middle;
+    margin-top: -5px;
+    margin-right: 10px;
+}
+
+/*Links*/
+
+a:link, a:visited {
+    color: #e67e22;
+    text-decoration: none;
+    border-bottom: 1px solid #e67e22;
+    padding-bottom: 1px;
+    transition: border-bottom 0.2s, color 0.2s;
+}
+
+a:hover, a:active {
+    color: #555555;
+    border-bottom: 1px solid transparent;
 }
 
 /*Buttons*/
@@ -171,7 +203,7 @@ header {
     margin-left: 40px;
 }
 
-.main-nav li a:link, .main-nav li a:visited{
+.main-nav li a:link, .main-nav li a:visited {
     padding: 8px 0;
     text-decoration: none;
     color: #fff;
@@ -271,8 +303,25 @@ header {
     margin-right: 25px;
 }
 
-.btn-app img{
+.btn-app img {
     height: 50px;
     width: auto;
     margin-right: 10px;
 }
+
+.btn-app:link, .btn-app:visited {
+    border: 0;
+}
+
+/*Cities*/
+
+.box img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 15px;
+}
+
+.city-feature {
+    margin-bottom: 5px;
+}
+
