--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -134,7 +134,7 @@ a:hover, a:active {
 
 /*Buttons*/
 
-.btn:link, .btn:visited {
+.btn:link, .btn:visited, input[type=submit] {
     display: inline-block;
     padding: 10px 30px;
     font-weight: 300;
@@ -143,7 +143,7 @@ a:hover, a:active {
     transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 
-.btn-full:link, .btn-full:visited {
+.btn-full:link, .btn-full:visited, input[type=submit] {
     background-color: #e67e22;
     border: 1px solid #e67e22;
     color: #fff;
@@ -155,8 +155,9 @@ a:hover, a:active {
     border: 1px solid #e67e22;
 }
 
-.btn:hover, .btn:active {
+.btn:hover, .btn:active, input[type=submit]:hover, input[type=submit]:active {
     background-color: #cf6d17;
+    cursor: pointer;
 }
 
 .btn-full:hover, .btn-full:active {
@@ -418,4 +419,26 @@ cite img {
 
 .plan-box ul li {
     padding: 5px 0;
+}
+
+/*Form*/
+
+.contact-form {
+    width: 60%;
+    margin: 0 auto;
+}
+
+input[type=text], input[type=email], select, textarea {
+    width: 100%;
+    padding: 7px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+}
+
+textarea {
+    height: 100px;
+}
+
+*:focus {
+    outline: none;
 }
