--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -442,3 +442,74 @@ textarea {
 *:focus {
     outline: none;
 }
+
+/*Footer*/
+
+footer {
+    background-color: #333;
+    padding: 50px;
+    font-size: 80%;
+}
+
+footer p {
+    color: #888;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.footer-nav {
+    list-style: none;
+    float: left;
+}
+
+.social-links {
+    list-style: none;
+    float: right;
+}
+
+.footer-nav li, .social-links li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.social-links li:last-child {
+    margin-right: 0;
+}
+
+.footer-nav li a:link, .footer-nav li a:visited,
+.social-links li a:link, .social-links li a:visited {
+    text-decoration: none;
+    border: 0;
+    color: #888;
+    transition: color 0.2s;
+}
+
+.social-links li a:link, .social-links li a:visited {
+    font-size: 160%;
+}
+
+.footer-nav li a:hover, .footer-nav li a:active {
+    text-decoration: none;
+    border: 0;
+    color: #ddd;
+}
+
+.facebook, .twitter, .google, .instagram {
+    transition: color 0.2s;
+}
+
+.facebook:hover {
+    color: #1877f2;
+}
+
+.twitter:hover {
+    color: #1da1f2;
+}
+
+.google:hover {
+    color: #ea4335;
+}
+
+.instagram:hover {
+    color: #c32aa3;
+}
