--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,12 +6,13 @@
     box-sizing: border-box;
 }
 
-html {
+html, body {
     color: #555;
     font-family: 'Lato', sans-serif;
     font-size: 20px;
     font-weight: 300;
     text-rendering: optimizeLegibility;
+    overflow-x: hidden;
 }
 
 .clearfix {
