--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -91,8 +91,41 @@
         margin: 0 0 4% 0;
     }
 
+    .main-nav {display: none;}
+
     .main-nav {
-        display: none;
+        float: left;
+        margin-top: 35px;
+        margin-left: 25px;
+    }
+
+    .main-nav li {
+        display: block;
+    }
+
+    .main-nav li a:link, .main-nav li a:visited {
+        display: block;
+        padding: 10px 0;
+        border: 0;
+        font-size: 100%;
+    }
+
+    .mobile-nav-icon {
+        display: inline-block;
+    }
+
+    .sticky .main-nav {margin-top: 10px;}
+
+    .sticky .main-nav li a:link, .sticky .main-nav li a:visited {
+        padding: 10px 0;
+    }
+
+    .sticky .mobile-nav-icon {
+        margin-top: 10px;
+    }
+
+    .sticky .mobile-nav-icon.menu {
+        color: #555;
     }
 
     h1 {
