--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,6 +13,7 @@ html, body {
     font-weight: 300;
     text-rendering: optimizeLegibility;
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 .clearfix {
@@ -195,6 +196,16 @@ header {
     margin-top: 20px;
 }
 
+.logo-black {
+    display: none;
+    height: 50px;
+    width: auto;
+    float: left;
+    margin: 5px 0;
+}
+
+/*Main Navigation*/
+
 .main-nav {
     float: right;
     list-style: none;
@@ -218,6 +229,47 @@ header {
 
 .main-nav li a:hover, .main-nav li a:active {
     border-bottom: 2px solid #e67e22;
+}
+
+/*Mobile Navigation*/
+
+.mobile-nav-icon {
+    float: right;
+    margin-top: 30px;
+    cursor: pointer;
+    display: none;
+}
+
+.menu {
+    font-size: 200%;
+    color: #fff;
+}
+
+/*Sticky Navigation*/
+
+.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.98);
+    box-shadow: 0 2px 2px #efefef;
+    z-index: 9999;
+}
+
+.sticky .main-nav {margin-top: 18px;}
+
+.sticky .main-nav li a:link, .sticky .main-nav li a:visited {
+    padding: 16px 0;
+    color: #555;
+}
+
+.sticky .logo-black {
+    display: block;
+}
+
+.sticky .logo {
+    display: none;
 }
 
 /*Features*/
@@ -513,4 +565,19 @@ footer p {
 
 .instagram:hover {
     color: #c32aa3;
+}
+
+/*Animations*/
+
+.js--wp-1, .js--wp-2, .js--wp-3 {
+    opacity: 0;
+    animation-duration: 1s;
+}
+
+.js--wp-4 {
+    animation-duration: 1s;
+}
+
+.js--wp-1.animated, .js--wp-2.animated, .js--wp-3.animated {
+    opacity: 1;
 }
