--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -110,6 +110,8 @@
         font-size: 100%;
     }
 
+    .mobile-nav-icon.menu {color: #fff;}
+
     .mobile-nav-icon {
         display: inline-block;
     }
